--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Enhanced To-Do App</title>
     <link rel="stylesheet" href="style.css">
-    <title>Simple To-Do App</title>
+    <style>
+
+    </style>
 </head>
 <body>
-    <div class="container">
-        <h1>My To-Do List</h1>
-        <input type="text" id="taskInput" placeholder="Enter a new task...">
-        <button id="addButton">Add</button>
-        <ul id="taskList"></ul>
-    </div>
-    <script src="script.js"></script>
+<div class="container">
+    <h1>My To-Do List</h1>
+    <input type="text" id="taskInput" placeholder="Enter a new task...">
+    <button id="addButton">Add</button>
+    <ul id="taskList"></ul>
+</div>
+<script src="script.js"></script>
 </body>
 </html>
